typescript/checker/tests/conformance/es6/functionDeclarations/FunctionDeclaration6_es6.ts.stderr
error: 'yield' cannot be used as a parameter within generator
 --> $DIR/tests/conformance/es6/functionDeclarations/FunctionDeclaration6_es6.ts:2:18
  |
2 | function*foo(a = yield) {
  |                  ^^^^^

